--- a/.github/workflows/prerun-tests.yml
+++ b/.github/workflows/prerun-tests.yml
@@ -1,39 +1,45 @@
 # This workflow will install Python dependencies, run tests, lint with a single version of Python, and upload a coverage report to Codecov
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: Python application
+name: Run Tests
 
 on:
-  push
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   test:
     name: Run pytest and collect coverage for Codecov
     runs-on: ubuntu-latest, macos-latest, windows-latest
+    
     steps:
     - uses: actions/checkout@v4
       with:
         fetch-depth: 0
         
     - name: Set up Python 3.10
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: "3.10"
         
     - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -e
-        pip install pytest pytest-cov
+      run: pip install -e
+
+    - name: Install test dependencies
+      run: pip install pytest pytest-cov
   
     - name: Run tests
-      run: |
-        pytest -v
+      run: pytest -v
     - name: Generate Codecov coverage report
-      run: |
-        pytest --cov-setupexample --cov_report=xml
+      run: pytest --cov-newtonsmethod --cov_report=xml
+      
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v5
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
-        token: 
+        file: ./coverage.xml
+        fail_ci_if_error: true
