--- a/.github/workflows/prerun-tests.yml
+++ b/.github/workflows/prerun-tests.yml
@@ -13,18 +13,23 @@ on:
 
 jobs:
   test:
-    name: Run pytest and collect coverage for Codecov
-    runs-on: ubuntu-latest, macos-latest, windows-latest
+    runs-on: ${{ matrix.platform }}
+
+    strategy:
+      matrix:
+        platform: [macos-latest, ubuntu-latest, windows-latest]
+        python-version: ["3.12.8"]
     
     steps:
-    - uses: actions/checkout@v4
+    - name: Check out repository
+      uses: actions/checkout@v4
       with:
         fetch-depth: 0
         
     - name: Set up Python 3.12
       uses: actions/setup-python@v5
       with:
-        python-version: "3.12.8"
+        python-version: ${{ matrix.python-version }}
         
     - name: Install dependencies
       run: pip install -e
