--- a/.github/workflows/prerun-tests.yml
+++ b/.github/workflows/prerun-tests.yml
@@ -32,7 +32,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
         
     - name: Install dependencies
-      run: pip install -e
+      run: pip install -e .
 
     - name: Install test dependencies
       run: pip install pytest pytest-cov
