--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ version = "0.0.0"
 authors = [
   { name="Alexander Kochling", email="akoch23@bu.edu" },
 ]
-description = "newtonsmethod workflow"
+description = "newtons method solver workflow"
 readme = "README.md"
 requires-python = ">=3.9"
 classifiers = [
@@ -16,6 +16,10 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
+    "matplotlib==3.10.0",
+    "numpy==1.26.4",
+    "pytest==7.1.2",
+    "pytest-cov==3.0.0",
 ]
 
 [project.urls]
