--- a/.github/workflows/prerun-tests.yml
+++ b/.github/workflows/prerun-tests.yml
@@ -17,7 +17,7 @@ jobs:
 
     strategy:
       matrix:
-        platform: [windows-latest]
+        platform: [macos-latest, ubuntu-latest, windows-latest]
         python-version: ["3.12.9"]
     
     steps:
