--- a/.github/workflows/prerun-tests.yml
+++ b/.github/workflows/prerun-tests.yml
@@ -38,7 +38,7 @@ jobs:
       run: pip install pytest pytest-cov
       
     - name: Run tests with Codecov coverage report
-      run: pytest --cov=newtonsmethod --cov-report=xml
+      run: pytest --cov=src/newtonsmethod --cov-report=xml
       
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v5
